# AudioMesh

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/audiomesh/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioMeshJNI.cpp  BiquadFilter.h  CMakeLists.txt  FirFilter.h
app/src/main/cpp/calib/: CalibEngine.cpp  CalibEngine.h
app/src/main/cpp/common/: Protocol.h
app/src/main/cpp/receiver/: ReceiverEngine.cpp  ReceiverEngine.h
app/src/main/cpp/sender/: MediaCodecDecoder.cpp  MediaCodecDecoder.h  SenderEngine.cpp  SenderEngine.h
app/src/main/java/com/audiomesh/app/: AudioLatencyProbe.java  AudioMeshActivity.kt  BeaconListenerService.kt  LatencyPrefs.java  MainActivity.java  NativeEngine.java  ReceiverService.java  SenderService.java
app/src/main/java/com/audiomesh/app/components/: DeviceSheet.kt  MiniPlayerBar.kt  PlaybackSheetContent.kt
app/src/main/java/com/audiomesh/app/data/: MetadataCache.kt  SongRepository.kt
app/src/main/java/com/audiomesh/app/ui/: AppNavigation.kt
app/src/main/java/com/audiomesh/app/ui/navigation/: Routes.kt
app/src/main/java/com/audiomesh/app/ui/screens/: LibraryScreen.kt  LibraryViewModel.kt  NowPlayingViewModel.kt  ReceiverMainScreen.kt  RolePickerScreen.kt  (+1 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/audiomesh/app/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
